# coriolis-pdk-lsxlib

./: .gitignore  build-devs.sh  meson.build  pyproject.toml
libs.ref/lsxlib/sky130/: a2_x2.spi  a2_x4.spi  a3_x2.spi  a3_x4.spi  a4_x2.spi  a4_x4.spi  an12_x1.spi  an12_x4.spi  ao22_x2.spi  ao22_x4.spi  ao2o22_x2.spi  ao2o22_x4.spi  buf_x2.spi  buf_x4.spi  buf_x8.spi  inv_x1.spi  inv_x2.spi  inv_x4.spi  inv_x8.spi  invbuf_x3.spi  lsxlib.lib  mx2_x2.spi  mx2_x4.spi  mx3_x2.spi  mx3_x4.spi  na2_x1.spi  na2_x4.spi  na3_x1.spi  na3_x4.spi  na4_x1.spi  na4_x4.spi  nao22_x1.spi  nao22_x4.spi  nao2o22_x1.spi  nao2o22_x4.spi  nmx2_x1.spi  nmx2_x4.spi  nmx3_x1.spi  nmx3_x4.spi  no2_x1.spi  (+50 more)
libs.ref/lsxlib/symbolic/: dodo.py
libs.tech/coriolis/lsxlib/: __init__.py  lsxlib.py  techno_symb.py
